--- a/src/Components/TheLog.css
+++ b/src/Components/TheLog.css
@@ -3,8 +3,10 @@
   width: 1928px;
   height: 1690px;
   background: #baac90;
+  
 }
 .signups {
+  padding-top: 50px;
   position: absolute;
   width: 1500px;
   height: 800px;
@@ -14,42 +16,42 @@
   border-radius: 50px;
 }
 #para {
-  /* margin-top: 30px; */
-  width: 300px;
-  height: 41px;
-  margin-left: 700px;
+  margin-left: 500px;
+  width: 250px;
+  height: 30px;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 40px;
   color: whitesmoke;
 }
 #para button{
-  margin-top: 20px;
-  width: 150px;
+  /* margin-top: 20px; */
+  width: 100px;
   height: 51px;
   background: #d9d9d9;
   border-radius: 10px;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 45px;
   color: #000000;
-  margin-left: 20px;
 }
 .signups h2 {
-width: 390px;
+  margin-right: 250px;
+position: absolute;
+width: 100px;
 height: 100px;
-margin-left: 580px;
-margin-top: 40px;
+margin-top: 10px;
 font-family: 'Montserrat';
 font-style: normal;
 font-weight: 600;
 font-size: 70px;
 line-height: 85px;
 color: whitesmoke;
+margin-left: 500px;
 }
 .signups h2 span {
   color: #C98B12;;
