--- a/src/Components/SignUp.css
+++ b/src/Components/SignUp.css
@@ -1,3 +1,56 @@
 .signup-div {
-    
+position: absolute;
+width: 100%;
+height: 1400px;
+margin-top: 100px;
+background: #BAAC90;
+}
+.signup-form {
+position: absolute;
+width: 90%;
+height: 1400px;
+margin-left: 100px;
+background: #625B4E;
+}
+.css {
+    margin-left: 34%;
+}
+.css label {
+position: absolute;
+width: 276px;
+height: 68px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 24px;
+line-height: 45px;
+color: whitesmoke;
+margin-top: 4.0%;
+}
+.css input, textarea {
+margin-top: 9.5%;
+width: 579px;
+height: 60px;
+background: #D9D9D9;
+}
+.css textarea {
+    margin-top: 11%;
+    height: 100px;
+    margin-bottom: 2%;
+}
+#signup-btn {
+position: absolute;
+width: 130px;
+height: 50px;
+background: #D9D9D9;
+border-radius: 10px;
+font-size: 20px;
+margin-top: 1%;
+}
+#link {
+    position: absolute;
+    color: white;
+    font-weight: bold;
+    margin-top: 5%;
+
 }
