--- a/src/Components/LogIn.css
+++ b/src/Components/LogIn.css
@@ -1,58 +1,61 @@
-input#username {
+.login-input{
   width: 560px;
   height: 50px;
-  margin-top: 250px;
+  margin-top: 2%;
   background: #d9d9d9;
   font-size: 16px;
   font-weight: bold;
   padding-left: 10px;
-  margin-right: 200px;
+  margin-left: 40%
 }
-input#password {
-  width: 560px;
-  height: 50px;
-  background: #d9d9d9;
-  font-size: 16px;
-  font-weight: bold;
-  padding-left: 10px;
-  margin-top: 30px;
-}
-#user {
-  margin-left: 350px;
+.login-form label {
   width: 184px;
-  height: 45px;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
   font-size: 25px;
   line-height: 45px;
   color: whitesmoke;
-  margin-right: 20px;
+  margin-left: 40%;
+  margin-top: 6%;
 }
-#pass {
-  margin-left: 350px;
-  width: 184px;
-  height: 45px;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 25px;
-  line-height: 45px;
-  color: whitesmoke;
-  margin-right: 25px;
-  margin-top: 30px;
+
+.login-div {
+ position: absolute;
+width: 100%;
+height: 100%;
+background: #BAAC90;
+margin-top: 5%;
 }
-#theebutton {
-  margin-top: 50px;
-  width: 100px;
-  height: 51px;
-  margin-left: 500px;
-  background: #d9d9d9;
+.login-form {
+position: absolute;
+width: 90%;
+height: 100%;
+margin-left: 5.5%;
+background: #625B4E;
+padding-top: 10%;
+}
+.login-btn {
+  position: absolute;
+  width: 130px;
+  height: 50px;
+  background: #D9D9D9;
   border-radius: 10px;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
   font-size: 20px;
-  line-height: 45px;
-  color: #000000;
-}
+  margin-top: 1%;
+  margin-left: 40%;
+  margin-top: 2%;
+  }
+  .login-form img {
+    position: absolute;
+    margin-left: 10%;
+    height: 50%;
+  }
+  #link2 {
+    position: absolute;
+    color: white;
+    font-weight: bold;
+    margin-top: 5%;
+    margin-left: 45%;
+    padding-top: 3%;
+  }
