--- a/src/Components/SignUp.css
+++ b/src/Components/SignUp.css
@@ -25,18 +25,21 @@ font-weight: 600;
 font-size: 24px;
 line-height: 45px;
 color: whitesmoke;
-margin-top: 4.0%;
+margin-top: 5.0%;
 }
 .css input, textarea {
-margin-top: 9.5%;
+margin-top: 11%;
 width: 579px;
 height: 60px;
 background: #D9D9D9;
+font-size: 15px;
+padding-left: 1%;
 }
 .css textarea {
-    margin-top: 11%;
+    margin-top: 13%;
     height: 100px;
     margin-bottom: 2%;
+    padding-top: 1%;
 }
 #signup-btn {
 position: absolute;
@@ -52,5 +55,14 @@ margin-top: 1%;
     color: white;
     font-weight: bold;
     margin-top: 5%;
-
+    margin-left: 10%;
+}
+.signup-form h1 {
+    position: absolute;
+    margin-left: 48%;
+    margin-top: 2%;
+    color: whitesmoke;
+}
+.signup-form h1 span {
+    color: #c98b18;
 }
