styling for my flower-card & container

--- a/src/Components/ViewPage.css
+++ b/src/Components/ViewPage.css
@@ -65,9 +65,9 @@ margin-left: 360px;
 margin-top: 570px;
 background: #C98B12;
 border-radius: 30px;
-font-size: 15px;
-font-weight: 500;
-color: whitesmoke;
+font-size: 16px;
+font-weight: 600;
+color: black;
 border-style: none;
 }
 .fun_fact {
