--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -2,13 +2,13 @@ footer {
 position: absolute;
 width: 100%;
 height: 94.01px;
-margin-top: 1450px;
+/* margin-top: 800px; */
 background: #b8aa8e;
 transform: matrix(1, 0, 0, 1, 0, 0);
-margin-top: 77%;
+margin-top: 33%;
 }
 .footer {
-    position: abosute;
+    position: absolute;
     width: 90%;
     background: #746b5b;
     height: 100%;
